# opentele

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  ACKNOWLEDGMENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.test  MANIFEST.in  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  requirements-docker.txt  requirements-test.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  wire-format-mismatch.yml
.github/workflows/: ci.yml  codeql.yml  docker.yml  docs.yml  forks-watch.yml  lint.yml  publish.yml
docs/: index.md
docs/examples/: README.md  batch-convert.md  cli-quick-start.md  docker.md  qr-login.md
opentele_ng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: benchmark.py  extract_devices_data.py  fork_watch.py  publish.sh  slim_devices_py.py
src/: __init__.py  __main__.py  api.py  debug.py  devices.json  devices.py  exception.py  utils.py
src/td/: __init__.py  account.py  auth.py  configs.py  mtp.py  qdatastream.py  shared.py  storage.py  tdesktop.py
src/tl/: configs.py  telethon.py
tests/: conftest.py  test_account_lskBackgroundOldOld.py  test_account_lskBotStorages_wire_format.py  test_account_lskPrefs.py  test_account_lskWebviewTokens_wire_format.py  test_account_mapdata_full_roundtrip.py  test_account_new_lskTypes_read.py  test_account_new_lskTypes_write.py  test_account_property_smoke.py  test_api_app_versions.py  test_cli.py  test_configs_lskType.py  test_dependencies_smoke.py  test_devices_data_integrity.py  test_devices_modern.py  test_devices_runtime.py  test_dos_protection.py  test_imports.py  test_known_issues_1_3_0.py  test_phase3_features.py  test_tdesktop_lifecycle.py  test_utils_extend_class.py  test_utils_extend_class_strict.py  test_utils_extend_class_validation.py
tests/integration/: test_real_tdata_smoke.py
tests/mapdata/: test_real_roundtrip.py
tests/qdatastream/: test_primitives.py  test_property_based.py  test_pure_errors.py  test_pure_vs_pyqt_equivalence.py  test_qbytearray.py  test_qstring.py  test_rawdata.py
